fix notification modal long text wrap

--- a/src/sources/forus-platform/scss/_common/dashboard.scss
+++ b/src/sources/forus-platform/scss/_common/dashboard.scss
@@ -335,6 +335,7 @@ body {
                             cursor: default;
                             display: flex;
                             flex-direction: row;
+                            word-break: break-word;
 
                             .notifications-menu-item-icon {
                                 margin-right: 10px;
